--- a/scripts.yaml
+++ b/scripts.yaml
@@ -17,7 +17,7 @@ notify_mobile:
       message: '{{ message }}'
       data:
         push:
-          sound: joi.wav
+          sound: 3rdParty_Success_Haptic.caf
 
 update_notification_badge:
   alias: Update Notification Badge
