--- a/themes/dark.yaml
+++ b/themes/dark.yaml
@@ -1,19 +1,12 @@
-# Theme based on Google app dark theme
-# Creator: Juan - @juanmtech
-# Website: https://www.juanmtech.com
-# YouTube Channel: https://youtube.com/juanmtech
-# My Home Assistant Config files: https://github.com/JuanMTech/Home_Assistant_files
-#
-#
-Google Dark Theme:
+Dark:
   # Header:
-  app-header-background-color: "#171717"
+  app-header-background-color: "#22252D"
   app-header-text-color: "#BDC1C6"
   # Main Interface Colors
   primary-color: "#5F9BEA"
   light-primary-color: var(--primary-color)
-  primary-background-color: "#171717"
-  secondary-background-color: "#202124"
+  primary-background-color: "#22252D"
+  secondary-background-color: "#2E3139"
   divider-color: var(--primary-background-color)
   # Text
   primary-text-color: "#BDC1C6"
@@ -23,7 +16,7 @@ Google Dark Theme:
   # Sidebar Menu
   sidebar-icon-color: var(--app-header-text-color)
   sidebar-text-color: '#BDC1C6'
-  sidebar-background-color: "#202124"
+  sidebar-background-color: "#2E3139"
   sidebar-selected-background-color: var(--primary-background-color)
   sidebar-selected-icon-color: "#5F9BEA"
   sidebar-selected-text-color: var(--sidebar-selected-icon-color))
@@ -38,7 +31,7 @@ Google Dark Theme:
   paper-slider-active-color: var(--paper-slider-knob-color)
   paper-slider-secondary-color: var(--light-primary-color)
   # Labels
-  label-badge-background-color: "#202124"
+  label-badge-background-color: "#2E3139"
   label-badge-text-color: "#BDC1C6"
   label-badge-red: "#D06568"
   label-badge-green: "#80C884"
@@ -47,9 +40,9 @@ Google Dark Theme:
   label-badge-gray: "#5F6267"
 
   # Cards
-  ha-card-border-radius: "10px"
-  ha-card-box-shadow: 1px 1px 5px 0px rgb(12, 12, 14)
-  paper-dialog-background-color: "#202124"
+  ha-card-border-radius: "20px"
+  ha-card-box-shadow: 1px 1px 40px rgb(27, 27, 27);
+  paper-dialog-background-color: "#2E3139"
   card-background-color: var(--paper-dialog-background-color)
   paper-listbox-background-color: var(--paper-dialog-background-color)
   # Switches
