--- a/themes/light.yaml
+++ b/themes/light.yaml
@@ -1,18 +1,11 @@
-# Theme based on Google app light theme
-# Creator: Juan - @juanmtech
-# Website: https://www.juanmtech.com
-# YouTube Channel: https://youtube.com/juanmtech
-# My Home Assistant Config files: https://github.com/JuanMTech/Home_Assistant_files
-#
-#
-Google Light Theme:
+Light:
   # Header:
-  app-header-background-color: "#F8F8F8"
+  app-header-background-color: "#F9F9F9"
   app-header-text-color: "#424242"
   # Main Interface Colors
   primary-color: "#5F9BEA"
   light-primary-color: var(--primary-color)
-  primary-background-color: "#F8F8F8"
+  primary-background-color: "#F9F9F9"
   secondary-background-color: var(--primary-background-color)
   divider-color: var(--primary-background-color)
   # Text
@@ -23,7 +16,7 @@ Google Light Theme:
   # Sidebar Menu
   sidebar-icon-color: var(--app-header-text-color)
   sidebar-text-color: '#424242'
-  sidebar-background-color: "#FFFFFF"
+  sidebar-background-color: "#F9F9F9"
   sidebar-selected-background-color: var(--primary-background-color)
   sidebar-selected-icon-color: "#5F9BEA"
   sidebar-selected-text-color: var(--sidebar-selected-icon-color))
@@ -46,8 +39,8 @@ Google Light Theme:
   label-badge-yellow: "#D9B757"
   label-badge-gray: "#5F6267"
   # Cards
-  ha-card-border-radius: "10px"
-  ha-card-box-shadow: 1px 1px 5px 0px rgb(230, 230, 230)
+  ha-card-border-radius: "20px"
+  ha-card-box-shadow: 0px 0px 15px 0px rgb(230, 230, 230)
   paper-dialog-background-color: "#FFFFFF"
   card-background-color: var(--paper-dialog-background-color)
   paper-listbox-background-color: var(--paper-dialog-background-color)
