Added vacuum camera map

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,3 +13,4 @@ tts: !include tts.yaml
 ios: !include ios.yaml
 notify: !include notify.yaml
 timer: !include timers.yaml
+camera: !include cameras.yaml
