--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,3 +14,4 @@ ios: !include ios.yaml
 notify: !include notify.yaml
 timer: !include timers.yaml
 camera: !include cameras.yaml
+webostv: !include webostvs.yaml
