Added utility meters

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -15,3 +15,4 @@ notify: !include notify.yaml
 timer: !include timers.yaml
 camera: !include cameras.yaml
 webostv: !include webostvs.yaml
+utility_meter: !include utility_meters.yaml
