Added homekit smoke sensors through hub

--- a/automations.yaml
+++ b/automations.yaml
@@ -361,6 +361,20 @@
   action:
   - service: scene.turn_on
     entity_id: scene.entry_dim
+- alias: Entry / Smoke detected
+  id: '1611077193622'
+  description: ''
+  trigger:
+  - platform: state
+    entity_id: input_boolean.smoke_entry
+    to: 'on'
+  condition: []
+  action:
+  - service: script.notify_all_critical
+    data:
+      message: Rook gedetecteerd in inkom
+      title: Rook gedetecteerd
+  mode: single
 - alias: Kitchen / Motion in Kitchen
   id: '1600000000008'
   trigger:
@@ -920,6 +934,20 @@
   action:
   - service: light.turn_off
     entity_id: light.stairs
+- alias: Stairs / Smoke detected
+  id: '1462877197322'
+  description: ''
+  trigger:
+  - platform: state
+    entity_id: input_boolean.smoke_stairs
+    to: 'on'
+  condition: []
+  action:
+  - service: script.notify_all_critical
+    data:
+      message: Rook gedetecteerd in trap
+      title: Rook gedetecteerd
+  mode: single
 - alias: Office / Motion / Motion in stairs
   id: '1613670861996'
   description: ''
@@ -954,6 +982,20 @@
   - service: light.turn_off
     data: {}
     entity_id: light.office_stairs
+  mode: single
+- alias: Office / Smoke detected
+  id: '1883877467322'
+  description: ''
+  trigger:
+  - platform: state
+    entity_id: input_boolean.smoke_office
+    to: 'on'
+  condition: []
+  action:
+  - service: script.notify_all_critical
+    data:
+      message: Rook gedetecteerd in kantoor
+      title: Rook gedetecteerd
   mode: single
 - alias: Notification actions / Mark as complete
   id: '1617881831320'
