--- a/sensors.yaml
+++ b/sensors.yaml
@@ -6,6 +6,21 @@
 
 - platform: uptime
 
+- platform: systemmonitor
+  resources:
+    - type: disk_use_percent
+    - type: disk_use
+    - type: disk_free
+    - type: memory_use_percent
+    - type: memory_use
+    - type: memory_free
+    - type: load_1m
+    - type: load_5m
+    - type: load_15m
+    - type: processor_use
+    - type: processor_temperature
+    - type: last_boot
+
 - platform: template
   sensors:
     living_set_temperature:
